tests/baselines/reference/switchBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(12,1): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(22,9): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(46,25): error TS7027: Unreachable code detected.


==== tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts (3 errors) ====
    switch ('') {
        case 'a':
            break;
    }
    
    ONE:
    switch ('') {
        case 'a':
            break ONE;
    }
    
    TWO:
    ~~~
!!! error TS7028: Unused label.
    THREE:
    switch ('') {
        case 'a':
            break THREE;
    }
    
    FOUR:
    switch ('') {
        case 'a':
            FIVE:
            ~~~~
!!! error TS7028: Unused label.
            switch ('') {
                case 'a':
                    break FOUR;
            }
    }
    
    switch ('') {
        case 'a':
            SIX:
            switch ('') {
                case 'a':
                    break SIX;
            }
    }
    
    SEVEN:
    switch ('') {
        case 'a':
            switch ('') {
                case 'a':
                    switch ('') {
                        case 'a':
                            break SEVEN;
                            EIGHT:
                            ~~~~~
!!! error TS7027: Unreachable code detected.
                            switch ('') {
                                case 'a':
                                    var fn = function () { }
                                    break EIGHT;
                            }
                    }
            }
    }
    